--- a/package.json
+++ b/package.json
@@ -32,22 +32,24 @@
     "@types/select2": "4.0.42"
   },
   "peerDependencies": {
-    "@angular/core": ">=2.2.0"
+    "@angular/common": ">=8.0.0",
+    "@angular/core": ">=8.0.0",
+    "@angular/platform-browser": ">=8.0.0"
   },
   "devDependencies": {
-    "@angular/common": "11.2.14",
-    "@angular/compiler": "11.2.14",
-    "@angular/compiler-cli": "11.2.14",
-    "@angular/core": "11.2.14",
-    "@angular/platform-browser": "11.2.14",
-    "@angular/platform-browser-dynamic": "11.2.14",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
     "@types/node": "^7.0.0",
     "core-js": "^2.4.1",
-    "rimraf": "^2.5.4",
+    "rimraf": "^3.0.0",
     "rollup": "^0.41.4",
-    "rxjs": "^5.0.3",
+    "rxjs": "^6.4.0",
     "ts-node": "^2.0.0",
-    "typescript": "^2.1.5",
-    "zone.js": "^0.7.4"
+    "typescript": "~3.5.3",
+    "zone.js": "~0.9.1"
   }
 }
