--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "homepage": "https://github.com/NejcZdovc/ng2-select2",
   "scripts": {
-    "finish": "mv lib/ng2-select2.component.ts.bak lib/ng2-select2.component.ts && cp README.md dist && rimraf dist/ng2-select2.component.css",
-    "build": "rimraf dist && ts-node tools/inline-styles.ts && tsc -p tsconfig-esm.json && rollup -c rollup.config.js dist/ng2-select2.js > dist/ng2-select2.bundle.js && cp package.json dist && ts-node tools/cleanup.ts && ngc -c tsconfig-esm.json && npm run finish",
-    "publish": "cd dist && npm publish"
+    "clean": "rimraf ./compiled && rimraf ./dist",
+    "prebuild": "npm run clean",
+    "lint": "tslint -c tslint.json 'lib/**/*.ts'",
+    "build": "ng-packagr -p package.json",
+    "prepublishOnly": "npm run lint && npm run build"
   },
   "dependencies": {
     "@types/jquery": "^2.0.39",
