--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
+  "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "ng2-select2",
   "version": "1.0.0-beta.16",
   "description": "Angular2 wrapper for select2",
-  "main": "ng2-select2.bundle.js",
-  "jsnext:main": "ng2-select2.js",
-  "typings": "ng2-select2.d.ts",
-  "module": "ng2-select2.js",
-  "types": "ng2-select2.d.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "scripts": {},
+  "ngPackage": {
+    "lib": {
+      "entryFile": "src/index.ts"
+    }
+  },
+  "author": "Nejc Zdovc <nejc.zdovc@3zsistemi.si>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/NejcZdovc/ng2-select2/issues"
+  },
+  "homepage": "https://github.com/NejcZdovc/ng2-select2",
   "repository": {
     "type": "git",
     "url": "https://github.com/NejcZdovc/ng2-select2.git"
@@ -16,24 +26,15 @@
     "select2",
     "wrap"
   ],
-  "author": "Nejc Zdovc <nejc.zdovc@3zsistemi.si>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/NejcZdovc/ng2-select2/issues"
-  },
-  "homepage": "https://github.com/NejcZdovc/ng2-select2",
-  "scripts": {
-    "finish": "mv lib/ng2-select2.component.ts.bak lib/ng2-select2.component.ts && cp README.md dist && rimraf dist/ng2-select2.component.css",
-    "build": "rimraf dist && ts-node tools/inline-styles.ts && tsc -p tsconfig-esm.json && rollup -c rollup.config.js dist/ng2-select2.js > dist/ng2-select2.bundle.js && cp package.json dist && ts-node tools/cleanup.ts && ngc -c tsconfig-esm.json && npm run finish",
-    "publish": "cd dist && npm publish",
-    "prepare": "npm run build"
-  },
   "dependencies": {
-    "@types/jquery": "^2.0.39",
-    "@types/select2": "4.0.42"
+    "tslib": "^1.9.0"
   },
   "peerDependencies": {
-    "@angular/core": ">=2.2.0"
+    "@angular/common": ">=11.0.0",
+    "@angular/core": ">=11.0.0",
+    "@angular/platform-browser": ">=11.0.0",
+    "rxjs": "^6.4.0",
+    "zone.js": ">=0.9.1"
   },
   "devDependencies": {
     "@angular/common": "11.2.14",
@@ -41,14 +42,13 @@
     "@angular/compiler-cli": "11.2.14",
     "@angular/core": "11.2.14",
     "@angular/platform-browser": "11.2.14",
-    "@angular/platform-browser-dynamic": "11.2.14",
-    "@types/node": "^7.0.0",
-    "core-js": "^2.4.1",
-    "rimraf": "^2.5.4",
-    "rollup": "^0.41.4",
-    "rxjs": "^5.0.3",
-    "ts-node": "^2.0.0",
-    "typescript": "^2.1.5",
-    "zone.js": "^0.7.4"
+    "@types/select2": "4.0.42",
+    "@types/jquery": "^2.0.39",
+    "ng-packagr": "5.7.1",
+    "rimraf": "^3.0.0",
+    "rxjs": "^6.4.0",
+    "tslint": "^5.20.0",
+    "typescript": "4.1.5",
+    "zone.js": "~0.9.1"
   }
 }
