--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,15 +10,15 @@
     "noEmitHelpers": true,
     "importHelpers": true,
     "outDir": "./dist",
-    "rootDir": "./lib",
+    "rootDir": "./src",
     "typeRoots": [
       "./node_modules/@types"
     ],
     "strict": true,
-    "lib": ["es2015", "dom"]
+    "lib": ["es6", "es2015", "dom"]
   },
   "files": [
-    "./lib/ng2-select2.ts"
+    "src/index.ts"
   ],
   "exclude": [
     "node_modules"
