--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "typeRoots": [
-      "./node_modules/@types"
+      "node_modules/@types"
     ],
     "strict": true,
     "lib": ["es6", "es2015", "dom"]
