--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "wrap"
   ],
   "dependencies": {
-    "tslib": "^1.9.0"
+    "tslib": "^1.9.0",
+    "@types/select2": "4.0.42",
+    "@types/jquery": "^2.0.39"
   },
   "peerDependencies": {
     "@angular/common": ">=11.0.0",
@@ -44,8 +46,6 @@
     "@angular/compiler-cli": "11.2.14",
     "@angular/core": "11.2.14",
     "@angular/platform-browser": "11.2.14",
-    "@types/select2": "4.0.42",
-    "@types/jquery": "^2.0.39",
     "ng-packagr": "5.7.1",
     "rimraf": "^3.0.0",
     "rxjs": "^6.4.0",
