--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "wrap"
   ],
   "dependencies": {
-    "tslib": "^1.9.0",
-    "@types/select2": "4.0.42",
-    "@types/jquery": "^2.0.39"
+    "tslib": "^1.9.0"
   },
   "peerDependencies": {
     "@angular/common": ">=11.0.0",
@@ -41,6 +39,8 @@
     "zone.js": ">=0.9.1"
   },
   "devDependencies": {
+    "@types/select2": "4.0.42",
+    "@types/jquery": "^2.0.39",
     "@angular/common": "11.2.14",
     "@angular/compiler": "11.2.14",
     "@angular/compiler-cli": "11.2.14",
