--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "lib": ["es6", "es2015", "dom"]
   },
   "files": [
-    "src/index.ts"
+    "index.ts"
   ],
   "exclude": [
     "node_modules"
