--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "name": "ng2-select2",
   "version": "1.0.0-beta.16",
   "description": "Angular2 wrapper for select2",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "scripts": {
     "prepare": "ng-packagr -p package.json"
   },
   "ngPackage": {
     "lib": {
-      "entryFile": "index.ts"
+      "entryFile": "src/index.ts"
     }
   },
   "author": "Nejc Zdovc <nejc.zdovc@3zsistemi.si>",
