--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "ng2-select2",
   "version": "1.0.0-beta.16",
   "description": "Angular2 wrapper for select2",
-  "main": "./dist/index.js",
+  "main": "./dist/index.d.ts",
   "typings": "./dist/index.d.ts",
   "scripts": {
     "prepare": "ng-packagr -p package.json"
