--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "name": "ng2-select2",
   "version": "1.0.0-beta.16",
   "description": "Angular2 wrapper for select2",
-  "main": "./dist/index.d.ts",
-  "typings": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "prepare": "ng-packagr -p package.json"
   },
