--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lib": {
       "entryFile": "src/index.ts"
     },
-    "dest": "./",
-    "deleteDestPath": false
+    "dest": "./dist",
+    "keepLifecycleScripts": true
   },
   "author": "Nejc Zdovc <nejc.zdovc@3zsistemi.si>",
   "license": "MIT",
